--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">Ibarra Project</string>
     <string name="loading_projects">Please wait, while we fetch projects</string>
     <string name="error_message">ERRORRRRR!!!!</string>
+
+    <string name="title_tasks">Tasks</string>
+    <string name="title_overview">Overview</string>
+    <string name="title_config">More</string>
 </resources>
