--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_overview">Overview</string>
     <string name="title_config">More</string>
     <string name="title_task_detail">Task Detail</string>
+    <string name="description">Description</string>
 </resources>
